--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,71 @@
 <resources>
     <string name="app_name">Self Employees Management</string>
+
+    <string name="app_name"> </string>
+    <string name="name">Name</string>
+    <string name="edtname">Enter Your Name</string>
+    <string name="edtName">Enter Your Name</string>
+    <string name="period">Period</string>
+    <string name="amount">Amount</string>
+    <string name="edtAmount">Enter Amount</string>
+    <string name="currency">Currency</string>
+    <string name="account">Account</string>
+    <string name="expenseTitle">Expense Catogery</string>
+
+    <string-array name="period">
+        <item>None</item>
+        <item>Weekly</item>
+        <item>Monthly</item>
+        <item>Yearly</item>
+        <item>One Time</item>
+    </string-array>
+    <string-array name="currency">
+        <item>USD</item>
+        <item>LKR</item>
+        <item>AMD</item>
+        <item>AED</item>
+        <item>AUD</item>
+        <item>JPY</item>
+    </string-array>
+    <string-array name="account">
+        <item>CASH</item>
+        <item>CREDIT</item>
+    </string-array>
+
+    <string name="edtfood">Amount</string>
+    <string name="edtshopping">Amount</string>
+    <string name="edttranspotation">Amount</string>
+    <string name="edthousing">Amount</string>
+    <string name="edtfinancial">Amount</string>
+    <string name="edtlife">Amount</string>
+    <string name="edtother">Amount</string>
+    <string name="edtcommunication">Amount</string>
+    <string name="btnSaveData">Save Data</string>
+    <string name="btnUpdateData">Update Data</string>
+    <string name="foodTitle">Foods</string>
+    <string name="shoppingTitle">Shopping</string>
+    <string name="transpotationTitle">Transpotation</string>
+    <string name="housingTitle">Housing</string>
+    <string name="financialTitle">Financial</string>
+    <string name="lifeTitle">Entertainment</string>
+    <string name="otherTitle">Other</string>
+    <string name="communicationTitle">Communication</string>
+    <string name="foodIMG">Food Image</string>
+    <string name="shoppingIMG">Shoppimg Image</string>
+    <string name="transpotationIMG">Transpotatioin Image</string>
+    <string name="housingIMG">HOusing Image</string>
+    <string name="financialIMG">Financial Image</string>
+    <string name="lifeIMG">Life Image</string>
+    <string name="otherIMG">Other Image</string>
+    <string name="communicationIMG">Communcation Image</string>
+
+    <string name="budgetTitle"><b>Budget</b></string>
+    <string name="budget">How much I can spend to meet my budgets ? </string>
+    <string name="btnInsert">CREATE BUDGET</string>
+    <string name="balance">Balance</string>
+    <string name="btnEdit">EDIT</string>
+    <string name="btnDelete">DELETE</string>
+    <string name="fetch_data">Fetch Data</string>
+    <string name="insert_data">insert Data</string>
+    <string name="firebase_realtime_database_app_in_kotlin">Firebase Realtime Database App in Kotlin</string>
 </resources>
